--- a/21/nginx-alpine/Dockerfile
+++ b/21/nginx-alpine/Dockerfile
@@ -1,3 +1,10 @@
 FROM frost917/nextcloud:latest
-    
+
 RUN apk add --no-cache nginx
+
+EXPOSE 80
+EXPOSE 443
+
+STOPSIGNAL SIGQUIT
+
+CMD ["nginx", "-g", "daemon off;"]
