--- a/21/nginx-alpine/Dockerfile
+++ b/21/nginx-alpine/Dockerfile
@@ -1,6 +1,12 @@
-FROM frost917/nextcloud:latest
+FROM nextcloud:21.0.1-fpm-alpine
 
-RUN apk add --no-cache nginx
+RUN deluser www-data && addgroup -g 1000 -S www-data \ 
+    && adduser -S -D -H -u 500 -s /sbin/nologin www-data 
+
+RUN apk add --no-cache samba-client nginx
+
+ENV PHP_MEMORY_LIMIT=4096M
+ENV PHP_UPLOAD_LIMIT=4096M
 
 EXPOSE 80
 EXPOSE 443
