--- a/21/nginx-alpine/Dockerfile
+++ b/21/nginx-alpine/Dockerfile
@@ -5,6 +5,8 @@ RUN deluser www-data && addgroup -g 1000 -S www-data \
 
 RUN apk add --no-cache samba-client nginx
 
+RUN cp -rapv /usr/src/nextcloud/* /var/www/html/
+
 ENV PHP_MEMORY_LIMIT=4096M
 ENV PHP_UPLOAD_LIMIT=4096M
 
