--- a/21/nginx-alpine/Dockerfile
+++ b/21/nginx-alpine/Dockerfile
@@ -4,8 +4,7 @@ RUN deluser www-data && addgroup -g 1000 -S www-data \
     && adduser -S -D -H -u 500 -s /sbin/nologin www-data 
 
 RUN apk add --no-cache samba-client nginx busybox
-
-WORKDIR /usr/src/nextcloud
+RUN cp -rapv /usr/src/nextcloud /var/www/html
 
 ENV PHP_MEMORY_LIMIT=4096M
 ENV PHP_UPLOAD_LIMIT=4096M
