--- a/21/fpm-alpine/Dockerfile
+++ b/21/fpm-alpine/Dockerfile
@@ -5,6 +5,11 @@ RUN deluser www-data && addgroup -g 1000 -S www-data \
 
 RUN apk update \
     && add --no-cache --no-install-recommends samba-client busybox imagick
+
+RUN pecl install -o -f redis \
+    &&  rm -rf /tmp/pear \
+    &&  docker-php-ext-enable redis 
+
 RUN cp -rapv /usr/src/nextcloud /var/www/html
 
 ENV PHP_MEMORY_LIMIT=4096M
