--- a/21/nginx-alpine/Dockerfile
+++ b/21/nginx-alpine/Dockerfile
@@ -4,7 +4,7 @@ RUN deluser www-data && addgroup -g 1000 -S www-data \
     && adduser -S -D -H -u 101 -s /sbin/nologin www-data 
 
 RUN apk update \
-    && apk add --no-cache samba-client busybox imagemagick nginx ffmpeg
+    && apk add --no-cache samba-client busybox imagemagick nginx ffmpeg clamav
 RUN cp -rapv /usr/src/nextcloud /var/www/html
 
 ENV PHP_MEMORY_LIMIT=4096M
