delete busybox in fpm-alpine

--- a/21/fpm-alpine/Dockerfile
+++ b/21/fpm-alpine/Dockerfile
@@ -1,4 +1,4 @@
-FROM nextcloud:fpm-alpine
+FROM nextcloud:21.0.3-fpm-alpine
 
 ENV NEXTCLOUD_PATH="/var/www/html"
 
@@ -6,7 +6,7 @@ RUN deluser www-data && addgroup -g 1000 -S www-data \
     && adduser -S -D -H -u 1000 -s /sbin/nologin www-data 
 
 RUN apk update \
-    && apk add --no-cache samba-client busybox imagemagick ffmpeg clamav unrar
+    && apk add --no-cache samba-client imagemagick ffmpeg clamav unrar
 
 RUN mkdir ${NEXTCLOUD_PATH}/data ${NEXTCLOUD_PATH}/config ${NEXTCLOUD_PATH}/custom_apps ${NEXTCLOUD_PATH}/themes
 
