버전 변경 podman 빌드용 스크립트 추가

--- a/22/fpm-alpine/Dockerfile
+++ b/22/fpm-alpine/Dockerfile
@@ -1,4 +1,4 @@
-FROM nextcloud:22.0.0-fpm-alpine
+FROM nextcloud:22.1.1-fpm-alpine
 
 ENV NEXTCLOUD_PATH="/var/www/html"
 
@@ -6,13 +6,16 @@ RUN deluser www-data && addgroup -g 1000 -S www-data \
     && adduser -S -D -H -u 1000 -s /sbin/nologin www-data 
 
 RUN apk update \
-    && apk add --no-cache samba-client imagemagick ffmpeg clamav unrar
+    && apk add --no-cache samba-client imagemagick ffmpeg
 
 WORKDIR ${NEXTCLOUD_PATH}
 
 RUN cp -r /usr/src/nextcloud/* /var/www/html/ \
     && rm -r ${NEXTCLOUD_PATH}/data ${NEXTCLOUD_PATH}/config ${NEXTCLOUD_PATH}/custom_apps ${NEXTCLOUD_PATH}/themes \
-    && mkdir -p ${NEXTCLOUD_PATH}/data ${NEXTCLOUD_PATH}/config ${NEXTCLOUD_PATH}/custom_apps ${NEXTCLOUD_PATH}/themes \
+    && mkdir -p ${NEXTCLOUD_PATH}/data \
+	${NEXTCLOUD_PATH}/config \
+	${NEXTCLOUD_PATH}/custom_apps \
+	${NEXTCLOUD_PATH}/themes \
     && chown -R www-data: ${NEXTCLOUD_PATH}
 
 ENV PHP_MEMORY_LIMIT=4096M
